--- a/modules/swagger-codegen/src/main/resources/TypeScript-Angular/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/TypeScript-Angular/api.mustache
@@ -27,7 +27,7 @@ module {{package}} {
             var path = this.basePath + '{{path}}';
 
 {{#pathParams}}
-            path = path.replace('{' + '{{paramName}}' + '}', String({{paramName}}));
+            path = path.replace('{' + '{{baseName}}' + '}', String({{paramName}}));
 
 {{/pathParams}}
             var queryParameters: any = {};
